--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						>
 							<div
 								class="one-third js-fullheight order-md-last img"
-								style="background-image: url(images/bg_1.png)"
+								style="background-image: url(images/avt1.jpg)"
 							>
 								<div class="overlay"></div>
 							</div>
@@ -127,7 +127,7 @@
 						>
 							<div
 								class="one-third js-fullheight order-md-last img"
-								style="background-image: url(images/bg_2.png)"
+								style="background-image: url(images/avt2.jpg)"
 							>
 								<div class="overlay"></div>
 							</div>
@@ -160,7 +160,7 @@
 							<div class="overlay"></div>
 							<div
 								class="img d-flex align-self-stretch align-items-center"
-								style="background-image: url(images/bg_1.png)"
+								style="background-image: url(images/avt2.jpg)"
 							></div>
 						</div>
 					</div>
