--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
+		<meta properties="og:description" name="web-description" itemprop="description" content="Hello, I'm Minh Quy a Backend Developer! Welcome to my website" />
+		<meta properties="og:image" name="web-image" itemprop="image" content="/images/logo.jpeg" />
 		<link rel = "icon" href = 
 		"/images/logol.jpeg" 
 				type = "image/x-icon">
@@ -614,7 +616,6 @@
 				/>
 			</svg>
 		</div>
-
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery-migrate-3.0.1.min.js"></script>
 		<script src="js/popper.min.js"></script>
