--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
 		<meta properties="og:description" name="web-description" itemprop="description" content="Hello, I'm Minh Quy a Backend Developer! Welcome to my website" />
-		<meta properties="og:image" name="web-image" itemprop="image" content="/images/logo.jpeg" />
+		<meta properties="og:image" name="web-image" itemprop="image" content="/images/logol.jpeg" />
+		
 		<link rel = "icon" href = 
 		"/images/logol.jpeg" 
 				type = "image/x-icon">
